# service/auth.py
@@ -2,6 +2,15 @@ from flask import request
 
 from common import auth
 
+from common import errors as common_errors
+from tapy.dyna import DynaTapy
+
+# get the logger instance -
+from common.logs import get_logger
+logger = get_logger(__name__)
+
+
+
 def authn_and_authz():
     """
     Entry point for checking authentication and authorization for all requests to the authenticator.
@@ -18,8 +27,10 @@ def authentication():
     # The authenticator uses different authentication methods for different endpoints. For example, the service
     # APIs such as clients and profiles use pure JWT authentication, while the OAuth endpoints use Basic Authentication
     # with OAuth client credentials
-    if '/clients' in request.url_rule.rule \
-        or '/profiles' in request.url_rule.rule:
+    logger.warning(f"URL RULE: {request.url_rule}")
+    if '/v3/clients' in request.url_rule.rule \
+        or '/profiles' in request.url_rule.rule \
+            or '/oauth2' in request.url_rule.rule:
         # use the standard Tapis request token to
         auth.authentication()
 
