# service/resources/openapi_v3.yml
@@ -18,7 +18,7 @@ servers:
   description: Local Development
 
 paths:
-  /clients:
+  /v3/clients:
     get:
       tags:
         - Clients
@@ -47,7 +47,7 @@ paths:
                     $ref: '#/components/schemas/arrayOfClients'
     post:
       tags:
-        - cCients
+        - Cients
       operationId: createClient
       requestBody:
         required: true
@@ -67,7 +67,7 @@ paths:
                   result:
                     $ref: '#/components/schemas/Client'
 
-  /clients/{client_id}:
+  /v3/clients/{client_id}:
     get:
       tags:
       - Clients
@@ -121,6 +121,30 @@ paths:
                     enum: [null]
 
 
+  /v3/oauth2/tokens:
+      post:
+        tags:
+          - Oauth2Tokens
+        operationId: createToken
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NewToken'
+        responses:
+          '201':
+            description: Created
+            content:
+              application/json:
+                schema:
+                  allOf:
+                    - $ref: '#/components/schemas/BasicResponse'
+                  properties:
+                    result:
+                      $ref: '#/components/schemas/Token'
+
+
 components:
   schemas:
     BasicResponse:
@@ -150,6 +174,22 @@ components:
           type: string
           description: URL for application to receive OAuth callbacks for executing flows such as authorization_code.
 
+    NewToken:
+      type: object
+      properties:
+        client_id:
+          type: string
+          description: A unique identifier for the client. Must be unique for the tenant.
+        client_secret:
+          type: string
+          description: A secret key for authenticating the client.
+        username:
+          type: string
+          description: A valid username
+        password:
+          type: string
+          description: A corresponding password for the username given.
+
     Client:
       type: object
       properties:
@@ -168,6 +208,13 @@ components:
         last_update_time:
           type: string
           description: The time the client was last updated.
+
+    Token:
+      type: object
+      properties:
+        token:
+          type: string
+          description: A jwt token.
 
 
     arrayOfClients:
